--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "leaflet": "^1.9.4",
-    "next": "^13.4.13-canary.14",
+    "next": "^13.4.12",
     "next-auth": "^4.22.3",
     "next-cloudinary": "^4.16.3",
     "query-string": "^8.1.0",
