--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ NEXTAUTH_SECRET = "NEXTAUTH_SECRET"
 GITHUB_ID=937764e9ec77db7d0aee
 GITHUB_SECRET=9f0554a81406685e6a93cd364ec27b92a4671e52
 
-# GOOGLE_CLIENT_ID=491224976558-l307p82cadal0i5alm5rm66kt3pdbb3i.apps.googleusercontent.com
-# GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=491224976558-l307p82cadal0i5alm5rm66kt3pdbb3i.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dsmupk4k6"
