--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "airbnb-video",
   "version": "0.1.0",
   "private": true,
-  "builds": [{ "src": "package.json", "use": "@vercel/next" }],
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
   "homepage": "http://syslians.github.io/airbnb-clone.git",
   "scripts": {
     "dev": "next dev",
@@ -23,7 +28,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "leaflet": "^1.9.4",
-    "next": "^13.4.12",
+    "next": "^14.0.3-canary.5",
     "next-auth": "^4.22.3",
     "next-cloudinary": "^4.16.3",
     "query-string": "^8.1.0",
