--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "homepage": "http://syslians.github.io/airbnb-clone.git",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && prisma generate",
+    "build": "next build & prisma generate",
     "start": "next start",
     "lint": "next lint",
     "deploy": "next build && next export && touch out/.nojekyll && git add -f out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
