--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://axios:axios@cluster0.errukix.mongodb.net/test"
-NEXTAUTH_SECRET = "NEXTAUTH_SECRET"  
+NEXTAUTH_SECRET = 3k6Y/3T9yL5fWYIXQSJyeFgJtzT653Knor77GuMSDN8=
+ 
+
 
 GOOGLE_CLIENT_ID=491224976558-l307p82cadal0i5alm5rm66kt3pdbb3i.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
