--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "next build && prisma generate",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "next build && next export && touch out/.nojekyll && git add -f out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
+    "deploy": "next build && touch out/.nojekyll && git add -f out/ && git commit -m 'deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -41,6 +41,7 @@
     "react-leaflet": "^4.2.1",
     "react-select": "^5.7.4",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.32.6",
     "typescript": "5.1.6",
     "world-countries": "^5.0.0",
     "zustand": "^4.3.9"
